--- a/homeworks/HW8/HW8-Final.ipynb
+++ b/homeworks/HW8/HW8-Final.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 171,
    "metadata": {
     "collapsed": true
    },
@@ -74,33 +74,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DFSTraversal():\n",
     "    def __init__(self,tree,traversalType):\n",
-    "        self.type = traversalType\n",
     "        self.tree = tree\n",
-    "        self.preorder_list= []\n",
-    "            \n",
-    "    def __iter__(self):\n",
-    "        if(self.type == DFSTraversalTypes.PREORDER):\n",
-    "            yield from self.preorder(self.tree)\n",
-    "            \n",
+    "        if(traversalType != DFSTraversalTypes.PREORDER and traversalType != DFSTraversalTypes.INORDER \n",
+    "           and traversalType != DFSTraversalTypes.POSTORDER):\n",
+    "            raise ValueError(\"Must input a traversal type of the form DFSTraversalTypes.INORDER\")\n",
+    "        else:\n",
+    "            self.type = traversalType\n",
+    "        self.i = self.__iter__()\n",
+    "    \n",
     "    def preorder(self, tree):\n",
     "        if tree != None:\n",
     "            yield tree.value\n",
-    "            yield from preorder(tree.left_child)\n",
-    "            yield from preorder(tree.right_child)\n",
+    "            yield from self.preorder(tree.left_child)\n",
+    "            yield from self.preorder(tree.right_child)\n",
+    "            \n",
+    "    def postorder(self, tree):\n",
+    "        if tree != None:\n",
+    "            yield from self.postorder(tree.left_child)\n",
+    "            yield from self.postorder(tree.right_child)\n",
+    "            yield tree.value\n",
+    "    def inorder(self,tree):\n",
+    "        if tree != None:\n",
+    "            yield from self.inorder(tree.left_child)\n",
+    "            yield tree.value\n",
+    "            yield from self.inorder(tree.right_child)\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        if(self.type == DFSTraversalTypes.PREORDER):\n",
+    "            yield from self.preorder(self.tree)\n",
+    "        elif(self.type == DFSTraversalTypes.POSTORDER):\n",
+    "            yield from self.postorder(self.tree)\n",
     "        else:\n",
-    "            yield from []\n",
-    "    def __next__()"
+    "            yield from self.inorder(self.tree)\n",
+    "            \n",
+    "    '''def __next__(self):\n",
+    "        while True:\n",
+    "            try:\n",
+    "                return next(self.i)\n",
+    "            except StopIteration:\n",
+    "                break'''\n",
+    "    \n",
+    "    def changeTraversalType(self, traversalType):\n",
+    "        self.type = traversalType"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 339,
    "metadata": {
     "collapsed": true
    },
@@ -191,10 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 340,
+   "metadata": {},
    "outputs": [],
    "source": [
     "input_array = [3, 9, 2, 11]\n",
@@ -212,25 +236,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "9\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "traversal = DFSTraversal(bt.tree, DFSTraversalTypes.INORDER)\n",
+    "for val in traversal:\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "2"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "traversal = DFSTraversal(bt.tree, DFSTraversalTypes.PREORDER)\n",
-    "next(traversal.__iter__())\n",
-    "#for val in traversal:\n",
-    "    #print(val)"
+    "traversal = DFSTraversal(bt.tree, DFSTraversalTypes.INORDER)\n",
+    "it = iter(traversal)\n",
+    "next(it)"
    ]
   },
   {
@@ -264,13 +309,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 319,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Load CSV file -- hint: you can use np.genfromtxt()"
+    "#Load CSV file -- hint: you can use np.genfromtxt()\n",
+    "import numpy as np\n",
+    "weather = np.genfromtxt('weather.csv', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.4 ,  0.3 ,  0.1 ,  0.05,  0.1 ,  0.05],\n",
+       "       [ 0.3 ,  0.4 ,  0.1 ,  0.1 ,  0.08,  0.02],\n",
+       "       [ 0.2 ,  0.3 ,  0.35,  0.05,  0.05,  0.05],\n",
+       "       [ 0.1 ,  0.2 ,  0.25,  0.3 ,  0.1 ,  0.05],\n",
+       "       [ 0.15,  0.2 ,  0.1 ,  0.15,  0.3 ,  0.1 ],\n",
+       "       [ 0.1 ,  0.2 ,  0.35,  0.1 ,  0.05,  0.2 ]])"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather"
    ]
   },
   {
@@ -289,21 +359,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 321,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class Markov:\n",
-    "    def __init__():\n",
-    "        # implement here\n",
+    "    def __init__(self):\n",
+    "        self.weather = ['sunny', 'cloudy', 'rainy', 'snowy', 'windy', 'hailing']\n",
     "        \n",
-    "    def load_data(array):\n",
-    "        # implement here\n",
+    "    def load_data(self,array):\n",
+    "        self.data = array\n",
     "    \n",
-    "    def get_prob(previous_day, following_day):\n",
-    "        # implement here -- returns a probability"
+    "    def get_prob(self,previous_day, following_day):\n",
+    "        p_index = None\n",
+    "        f_index = None\n",
+    "        for i,v in enumerate(self.weather):\n",
+    "            if(v == previous_day):\n",
+    "                p_index = i\n",
+    "        for i, v in enumerate(self.weather):\n",
+    "            if(v == following_day):\n",
+    "                f_index = i\n",
+    "        if (p_index != None and f_index != None):\n",
+    "            return float(self.data[p_index][f_index])\n",
+    "        else: \n",
+    "            raise ValueError(\"Must input a valid weather type as a string.\")\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 322,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Markov()\n",
+    "model.load_data(weather)\n",
+    "model.get_prob('sunny','sunny')"
    ]
   },
   {
@@ -336,6 +440,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Markov:\n",
+    "    def __init__(self,weather):\n",
+    "        #should we check that the right weather is passed in\n",
+    "        self.weather = ['sunny', 'cloudy', 'rainy', 'snowy', 'windy', 'hailing']\n",
+    "        self.curr = weather\n",
+    "    def load_data(self,array):\n",
+    "        self.data = array\n",
+    "    \n",
+    "    def get_prob(self,previous_day, following_day):\n",
+    "        p_index = None\n",
+    "        f_index = None\n",
+    "        for i,v in enumerate(self.weather):\n",
+    "            if(v == previous_day):\n",
+    "                p_index = i\n",
+    "        for i, v in enumerate(self.weather):\n",
+    "            if(v == following_day):\n",
+    "                f_index = i\n",
+    "        if (p_index != None and f_index != None):\n",
+    "            return float(self.data[p_index][f_index])\n",
+    "        else: \n",
+    "            raise ValueError(\"Must input a valid weather type as a string.\")\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "        \n",
+    "    def __next__(self):\n",
+    "        #get relevant weather \n",
+    "        for i,v in enumerate(self.weather):\n",
+    "            if(v == self.curr):\n",
+    "                row = self.data[i]\n",
+    "        #create a cumulative sum of the probablities of each weather\n",
+    "        weather_probs = np.cumsum(row)\n",
+    "        #get a random number for weather\n",
+    "        rand_num = np.random.random()\n",
+    "        weather_index = weather_probs.searchsorted(rand_num)\n",
+    "        #return assocaite weather as string\n",
+    "        return self.weather[weather_index]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -352,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 328,
    "metadata": {
     "collapsed": true
    },
@@ -367,6 +517,52 @@
     "    'Los Angeles': 'cloudy',\n",
     "    'San Fransisco': 'windy'\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New York\n",
+      "rainy\n",
+      "Chicago\n",
+      "snowy\n",
+      "Seattle\n",
+      "rainy\n",
+      "Boston\n",
+      "rainy\n",
+      "Miami\n",
+      "windy\n",
+      "Los Angeles\n",
+      "cloudy\n",
+      "San Fransisco\n",
+      "windy\n"
+     ]
+    }
+   ],
+   "source": [
+    "city_weather_predictions = {}\n",
+    "for city in city_weather:\n",
+    "    print(city)\n",
+    "    w = city_weather[city]\n",
+    "    count = [0] * 6\n",
+    "    model = Markov(w)\n",
+    "    model.load_data(weather)\n",
+    "    for index in range(100):\n",
+    "        for i,v in enumerate(model):\n",
+    "            if (i==7):\n",
+    "                count[model.weather.index(v)]+=1\n",
+    "                break\n",
+    "    most_common = model.weather[count.index(max(count))]\n",
+    "    print(most_common)\n",
+    "    city_weather_predictions[city] = most_common"
    ]
   }
  ],
