--- a/homeworks/HW8/HW8-Final.ipynb
+++ b/homeworks/HW8/HW8-Final.ipynb
@@ -58,80 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from enum import Enum\n",
-    "\n",
-    "class DFSTraversalTypes(Enum):\n",
-    "    PREORDER = 1\n",
-    "    INORDER = 2\n",
-    "    POSTORDER = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 371,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing TreeTraversal.py\n"
+     ]
+    }
+   ],
    "source": [
-    "class DFSTraversal():\n",
-    "    def __init__(self,tree,traversalType):\n",
-    "        self.tree = tree\n",
-    "        if(traversalType != DFSTraversalTypes.PREORDER and traversalType != DFSTraversalTypes.INORDER \n",
-    "           and traversalType != DFSTraversalTypes.POSTORDER):\n",
-    "            raise ValueError(\"Must input a traversal type of the form DFSTraversalTypes.INORDER\")\n",
-    "        else:\n",
-    "            self.type = traversalType\n",
-    "        self.i = self.__iter__()\n",
-    "    \n",
-    "    def preorder(self, tree):\n",
-    "        if tree != None:\n",
-    "            yield tree.value\n",
-    "            yield from self.preorder(tree.left_child)\n",
-    "            yield from self.preorder(tree.right_child)\n",
-    "            \n",
-    "    def postorder(self, tree):\n",
-    "        if tree != None:\n",
-    "            yield from self.postorder(tree.left_child)\n",
-    "            yield from self.postorder(tree.right_child)\n",
-    "            yield tree.value\n",
-    "    def inorder(self,tree):\n",
-    "        if tree != None:\n",
-    "            yield from self.inorder(tree.left_child)\n",
-    "            yield tree.value\n",
-    "            yield from self.inorder(tree.right_child)\n",
-    "    \n",
-    "    def __iter__(self):\n",
-    "        if(self.type == DFSTraversalTypes.PREORDER):\n",
-    "            yield from self.preorder(self.tree)\n",
-    "        elif(self.type == DFSTraversalTypes.POSTORDER):\n",
-    "            yield from self.postorder(self.tree)\n",
-    "        else:\n",
-    "            yield from self.inorder(self.tree)\n",
-    "            \n",
-    "    '''def __next__(self):\n",
-    "        while True:\n",
-    "            try:\n",
-    "                return next(self.i)\n",
-    "            except StopIteration:\n",
-    "                break'''\n",
-    "    \n",
-    "    def changeTraversalType(self, traversalType):\n",
-    "        self.type = traversalType"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 339,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "%%file TreeTraversal.py\n",
     "class Node():\n",
     "    def __init__(self,value):\n",
     "        self.value = value\n",
@@ -212,12 +151,65 @@
     "            if (parent.value > val):\n",
     "                parent.left_child = replacing_node\n",
     "            if (parent.value < val):\n",
-    "                parent.right_child = replacing_node"
+    "                parent.right_child = replacing_node\n",
+    "                \n",
+    "from enum import Enum\n",
+    "\n",
+    "class DFSTraversalTypes(Enum):\n",
+    "    PREORDER = 1\n",
+    "    INORDER = 2\n",
+    "    POSTORDER = 3\n",
+    "    \n",
+    "class DFSTraversal():\n",
+    "    def __init__(self,tree,traversalType):\n",
+    "        self.tree = tree\n",
+    "        if(traversalType != DFSTraversalTypes.PREORDER and traversalType != DFSTraversalTypes.INORDER \n",
+    "           and traversalType != DFSTraversalTypes.POSTORDER):\n",
+    "            raise ValueError(\"Must input a traversal type of the form DFSTraversalTypes.INORDER\")\n",
+    "        else:\n",
+    "            self.type = traversalType\n",
+    "        #self.i = self.__iter__()\n",
+    "    \n",
+    "    def preorder(self, tree):\n",
+    "        if tree != None:\n",
+    "            yield tree.value\n",
+    "            yield from self.preorder(tree.left_child)\n",
+    "            yield from self.preorder(tree.right_child)\n",
+    "            \n",
+    "    def postorder(self, tree):\n",
+    "        if tree != None:\n",
+    "            yield from self.postorder(tree.left_child)\n",
+    "            yield from self.postorder(tree.right_child)\n",
+    "            yield tree.value\n",
+    "            \n",
+    "    def inorder(self,tree):\n",
+    "        if tree != None:\n",
+    "            yield from self.inorder(tree.left_child)\n",
+    "            yield tree.value\n",
+    "            yield from self.inorder(tree.right_child)\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        if(self.type == DFSTraversalTypes.PREORDER):\n",
+    "            yield from self.preorder(self.tree)\n",
+    "        elif(self.type == DFSTraversalTypes.POSTORDER):\n",
+    "            yield from self.postorder(self.tree)\n",
+    "        else:\n",
+    "            yield from self.inorder(self.tree)\n",
+    "            \n",
+    "    '''def __next__(self):\n",
+    "        while True:\n",
+    "            try:\n",
+    "                return next(self.i)\n",
+    "            except StopIteration:\n",
+    "                break'''\n",
+    "    \n",
+    "    def changeTraversalType(self, traversalType):\n",
+    "        self.type = traversalType\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
       "3\n",
+      "2\n",
       "9\n",
       "11\n"
      ]
@@ -252,13 +244,14 @@
    ],
    "source": [
     "traversal = DFSTraversal(bt.tree, DFSTraversalTypes.INORDER)\n",
+    "traversal.changeTraversalType(DFSTraversalTypes.PREORDER)\n",
     "for val in traversal:\n",
     "    print(val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +260,7 @@
        "2"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,38 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load CSV file -- hint: you can use np.genfromtxt()\n",
     "import numpy as np\n",
     "weather = np.genfromtxt('weather.csv', delimiter=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 320,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.4 ,  0.3 ,  0.1 ,  0.05,  0.1 ,  0.05],\n",
-       "       [ 0.3 ,  0.4 ,  0.1 ,  0.1 ,  0.08,  0.02],\n",
-       "       [ 0.2 ,  0.3 ,  0.35,  0.05,  0.05,  0.05],\n",
-       "       [ 0.1 ,  0.2 ,  0.25,  0.3 ,  0.1 ,  0.05],\n",
-       "       [ 0.15,  0.2 ,  0.1 ,  0.15,  0.3 ,  0.1 ],\n",
-       "       [ 0.1 ,  0.2 ,  0.35,  0.1 ,  0.05,  0.2 ]])"
-      ]
-     },
-     "execution_count": 320,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weather"
    ]
   },
   {
@@ -359,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 373,
    "metadata": {
     "collapsed": true
    },
@@ -367,6 +335,7 @@
    "source": [
     "class Markov:\n",
     "    def __init__(self):\n",
+    "        #array of all possible weather types\n",
     "        self.weather = ['sunny', 'cloudy', 'rainy', 'snowy', 'windy', 'hailing']\n",
     "        \n",
     "    def load_data(self,array):\n",
@@ -390,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +368,7 @@
        "0.4"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 375,
    "metadata": {
     "collapsed": true
    },
@@ -449,9 +418,14 @@
    "source": [
     "class Markov:\n",
     "    def __init__(self,weather):\n",
-    "        #should we check that the right weather is passed in\n",
+    "        #array of all possible weather types\n",
     "        self.weather = ['sunny', 'cloudy', 'rainy', 'snowy', 'windy', 'hailing']\n",
-    "        self.curr = weather\n",
+    "        #check that the right weather type is passed in\n",
+    "        if(weather not in self.weather):\n",
+    "            raise ValueError(\"Must input a valid weather type as a string.\")\n",
+    "        else:\n",
+    "            self.curr = weather\n",
+    "        \n",
     "    def load_data(self,array):\n",
     "        self.data = array\n",
     "    \n",
@@ -502,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 363,
    "metadata": {
     "collapsed": true
    },
@@ -521,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 364,
    "metadata": {
     "scrolled": true
    },
