--- a/homeworks/HW8/HW8-Final.ipynb
+++ b/homeworks/HW8/HW8-Final.ipynb
@@ -168,7 +168,6 @@
     "            raise ValueError(\"Must input a traversal type of the form DFSTraversalTypes.INORDER\")\n",
     "        else:\n",
     "            self.type = traversalType\n",
-    "        #self.i = self.__iter__()\n",
     "    \n",
     "    def preorder(self, tree):\n",
     "        if tree != None:\n",
@@ -194,14 +193,7 @@
     "        elif(self.type == DFSTraversalTypes.POSTORDER):\n",
     "            yield from self.postorder(self.tree)\n",
     "        else:\n",
-    "            yield from self.inorder(self.tree)\n",
-    "            \n",
-    "    '''def __next__(self):\n",
-    "        while True:\n",
-    "            try:\n",
-    "                return next(self.i)\n",
-    "            except StopIteration:\n",
-    "                break'''\n",
+    "            yield from self.inorder(self.tree)      \n",
     "    \n",
     "    def changeTraversalType(self, traversalType):\n",
     "        self.type = traversalType\n"
@@ -209,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +252,7 @@
        "2"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,36 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 381,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New York\n",
-      "rainy\n",
-      "Chicago\n",
-      "snowy\n",
-      "Seattle\n",
-      "rainy\n",
-      "Boston\n",
-      "rainy\n",
-      "Miami\n",
-      "windy\n",
-      "Los Angeles\n",
-      "cloudy\n",
-      "San Fransisco\n",
-      "windy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#create dictionary\n",
     "city_weather_predictions = {}\n",
+    "\n",
+    "#do 100 simulations for each city weather in 7 days\n",
     "for city in city_weather:\n",
-    "    print(city)\n",
     "    w = city_weather[city]\n",
     "    count = [0] * 6\n",
     "    model = Markov(w)\n",
@@ -535,8 +508,32 @@
     "                count[model.weather.index(v)]+=1\n",
     "                break\n",
     "    most_common = model.weather[count.index(max(count))]\n",
-    "    print(most_common)\n",
     "    city_weather_predictions[city] = most_common"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New York cloudy\n",
+      "Chicago snowy\n",
+      "Seattle cloudy\n",
+      "Boston rainy\n",
+      "Miami windy\n",
+      "Los Angeles cloudy\n",
+      "San Fransisco windy\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print city_weather_predictions dictionary\n",
+    "for city in city_weather_predictions:\n",
+    "    print(city,city_weather_predictions[city])"
    ]
   }
  ],
