--- a/homeworks/HW8/HW8-Final.ipynb
+++ b/homeworks/HW8/HW8-Final.ipynb
@@ -205,6 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create a tree for test ~from question example\n",
     "input_array = [3, 9, 2, 11]\n",
     "bt = BinaryTree()\n",
     "for val in input_array:\n",
@@ -235,6 +236,7 @@
     }
    ],
    "source": [
+    "#Markov Class in Action\n",
     "traversal = DFSTraversal(bt.tree, DFSTraversalTypes.INORDER)\n",
     "traversal.changeTraversalType(DFSTraversalTypes.PREORDER)\n",
     "for val in traversal:\n",
@@ -366,6 +368,7 @@
     }
    ],
    "source": [
+    "#Markov Class in Action\n",
     "model = Markov()\n",
     "model.load_data(weather)\n",
     "model.get_prob('sunny','sunny')"
