Pre lecture commit

--- a/homeworks/HW8/HW8-Final.ipynb
+++ b/homeworks/HW8/HW8-Final.ipynb
@@ -260,6 +260,7 @@
     }
    ],
    "source": [
+    "#Markov Class in Action\n",
     "traversal = DFSTraversal(bt.tree, DFSTraversalTypes.INORDER)\n",
     "it = iter(traversal)\n",
     "next(it)"
