--- a/homeworks/HW9/HW9-Final.ipynb
+++ b/homeworks/HW9/HW9-Final.ipynb
@@ -227,7 +227,7 @@
     "root.find('phase').append(speciesArray)\n",
     "\n",
     "#Make copy of species element\n",
-    "specie = deepcopy(root.find('speciesData').find('species'))\n"
+    "species = deepcopy(root.find('speciesData').find('species'))\n"
    ]
   }
  ],
